[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PressStart2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Label" type="Label" parent="Background"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -127.0
margin_bottom = -113.0
custom_fonts/font = SubResource( 3 )
text = "Pause Menu"
align = 1
valign = 1
uppercase = true

[node name="ActionsHBoxContainer" type="HBoxContainer" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -30.0
margin_right = -4.0
margin_bottom = -2.0

[node name="Menu" type="Button" parent="Background/ActionsHBoxContainer"]
modulate = Color( 0.831373, 0.831373, 0.831373, 1 )
margin_right = 509.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Menu"

[node name="Resume" type="Button" parent="Background/ActionsHBoxContainer"]
modulate = Color( 0.258824, 0.960784, 0.4, 1 )
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 28.0
grow_vertical = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "Resume"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )

[connection signal="pressed" from="Background/ActionsHBoxContainer/Menu" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Background/ActionsHBoxContainer/Resume" to="." method="_on_resume_button_pressed"]
